[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "at-home-dashboard"
version = "0.1.0"
description = "A modular, auto-refreshing terminal dashboard for NYC subway, weather, baseball, and news"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "gtfs-realtime-bindings",
    "feedparser",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "SIM105",  # contextlib.suppress — try/except/pass is fine for curses code
]

[tool.ruff.lint.isort]
known-first-party = ["at_home_dashboard"]
